Bug 949859 - Remove mLastEventTime from APZC and store a timestamp in Axis instead. r=botond